Fixed issue 'Buttons - Call to Action - Insufficient Contrast #92'

--- a/templates/components/base/_globals.scss
+++ b/templates/components/base/_globals.scss
@@ -25,7 +25,8 @@ $darkblue:      #004576;
 $borderblue:    #7399b7;
 $midblue:       #366996;
 $lightblue:     #82a1bd;
-$lighterblue:   #359aec;
+// $lighterblue:   #359aec;
+$lighterblue:   #0076de;
 $paleblue:      #f2f5f8;
 $lightestblue:  #e1eaf5;
 
